--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@ionic/react-router": "^8.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "capacitor-plugin-camera": "^2.0.2",
+    "capacitor-plugin-dynamsoft-barcode-reader": "^2.0.1",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
